# MutOSim

./: .clang-format  .ctags  .gitignore  .gitmodules  .localvimrc  .nvimrc.lua  CMakeLists.txt  README.md  mutosim.cfg  notes.md  todo.md  vcpkg.json
.vim/: settings.json
cmake/Hunter/: config.cmake
doc/: dictionary.md
src/: CMakeLists.txt  calculation.cpp  calculation.h  cli_options.cpp  cli_options.h  cli_options_format.cpp  cli_options_format.h  config.h  event.cpp  event.h  event_format.h  events.cpp  events.h  group.cpp  group.h  load.cpp  load.h  logger.h  loss_group.cpp  loss_group.h  math.cpp  math.h  math_utils.cpp  math_utils.h  mutosim.cpp  mutosim.h  overflow_policy.cpp  overflow_policy.h  request.cpp  request.h  request_stream.cpp  request_stream.h  scenario_settings.cpp  scenario_settings.h  sim.cpp  sim.h  simulation.h  simulation_settings.cpp  simulation_settings.h  source_stream.cpp  (+22 more)
src/model/: analytical.cpp  analytical.h  common.h  erlang_formula.cpp  erlang_formula.h  fredericks_hayward.h  group.cpp  group.h  kaufman_roberts.cpp  kaufman_roberts.h  overflow_far.cpp  overflow_far.h  resource.cpp  resource.h  resource_format.h  stream_properties.cpp  stream_properties.h  stream_properties_format.cpp  stream_properties_format.h  test.cpp  test.h
src/overflow_policy/: factory.cpp  factory.h  overflow_policy.cpp  overflow_policy.h
src/scenarios/: simple.cpp  simple.h  single_overflow.cpp  single_overflow.h  topology_based.cpp  topology_based.h
src/simulation/: event.cpp  event.h  event_format.cpp  event_format.h  group.cpp  group.h  load.cpp  load.h  load_format.cpp  load_format.h  stats.cpp  stats.h  stats_format.cpp  stats_format.h  world.cpp  world.h
src/simulation/overflow_policy/: factory.cpp  factory.h  overflow_policy.cpp  overflow_policy.h
src/simulation/source_stream/: engset.cpp  engset.h  factory.cpp  factory.h  pascal.cpp  pascal.h  poisson.cpp  poisson.h  source_stream.cpp  source_stream.h  source_stream_format.cpp  source_stream_format.h
src/source_stream/: engset.cpp  engset.h  pascal.cpp  pascal.h  pascal2.cpp  pascal2.h  poisson.cpp  poisson.h  source_stream.cpp  source_stream.h
src/types/: common.h  difference_type.h  hash.cpp  hash.h  operations.cpp  operations.h  parser.h  precision.cpp  precision.h  types.h  types_format.cpp  types_format.h
tests/: CMakeLists.txt  math_util_tests.cpp  overflow_far_tests.cpp  test.cpp
tools/: ctags-update.sh  merge_json.py  plot.py  plot_old.py  test_sim.sh  topology_graph.py
tools/MutOSim/: common.py  plots.py
